made p tag text shadow less and fixed navbar on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@ $brown: #A5857E;
 $fadedBrown: #D0BCB7;
 $lightPurple: #CE9DD9;
 $darkPurple: #A98C86;
-$offBlack: #313639;
+$offBlack: #585e5e;
 
 
 *{
@@ -18,14 +18,8 @@ $offBlack: #313639;
  /**** Alignment and spacing of sections ********/
 
   .header {
-    // background: url(../img/greyOcean.jpg) no-repeat center center fixed;
-    // -webkit-background-size: cover;
-    // -moz-background-size: cover;
-    // -o-background-size: cover;
-    // background-size: cover;
     background: rgb(226,152,55);
-background: radial-gradient(circle, rgba(226,152,55,1) 0%, rgba(139,80,20,1) 100%);
-
+    background: radial-gradient(circle, rgba(226,152,55,1) 0%, rgba(139,80,20,1) 100%);
   	height: 90vh;
     max-width:100%;
     min-width: 10%;
@@ -91,13 +85,12 @@ background: radial-gradient(circle, rgba(226,152,55,1) 0%, rgba(139,80,20,1) 100
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  // background: url("/img/darkGreyWall.jpg") no-repeat fixed center;
   .content {
     position: relative;
     border-bottom: 2px dashed $fadedBrown;
     padding: 8%;
     background: rgb(226,152,55);
-background: linear-gradient(336deg, rgba(226,152,55,1) 0%, rgba(177,34,94,1) 92%, rgba(141,82,16,1) 100%);
+    background: linear-gradient(336deg, rgba(226,152,55,1) 0%, rgba(177,34,94,1) 92%, rgba(141,82,16,1) 100%);
     .sectionTitle {
       color: $white;
       text-align: center;
@@ -109,7 +102,7 @@ background: linear-gradient(336deg, rgba(226,152,55,1) 0%, rgba(177,34,94,1) 92%
     }
     p {
       color: $offWhite;
-      text-shadow: 2px 2px #891f1f;
+      text-shadow: 1px 1px #891f1f;
       line-height: 28px;
       padding-bottom: 20px;
       border-radius: 10px 100px / 120px;
@@ -270,8 +263,8 @@ background: linear-gradient(336deg, rgba(226,152,55,1) 0%, rgba(177,34,94,1) 92%
 	left:0;
 	width: 100%;
 	height: auto;
-	background-color: #585e5e;
-	color: #696969;
+	background-color: $offBlack;
+	color: $offWhite;
 	text-align: center;
   .links {
     padding-bottom: 30px;
@@ -314,14 +307,14 @@ WORK ON THE PSEUDO ELEMENTS NEXT
 a:link {
 	color: white;
 	text-decoration: none;
-	// padding: 20px;
+
  }
 a:visited {
 	background-color: #997E82;
 	color: white;
 }
 a:hover{
-    color: #F7F1F0;
+    color: orange !important;
 
 }
 
@@ -350,7 +343,6 @@ a:hover{
         }
       }
     }
-    //aboutme amake the width a smaller percentage
   }
 /* phones */
 @media only screen and (max-width: 974px) {
@@ -360,18 +352,25 @@ a:hover{
     .header {
       height: 95vh;
       .navbar{
+        height: 50px;
+        padding: 0px;
+        li {
+          height: auto;
+        }
         img {
           display: none;
         }
       }
-
+    }
+    .title-section {
+      display: absolute;
+      top:60%;
+      height: 80vh;
       h1 {
       font-size: 50px;
       width: 75%;
       }
     }
-
-
 
 
     .footer {
@@ -383,13 +382,5 @@ a:hover{
 @media only screen and (max-width: 767px) and (orientation: portrait) {
   .header {
   }
-
-  // .projects {
-  //   .projectTypes {
-  //     .emails {
-  //       margin-bottom: 50px!important;
-  //     }
-  //   }
-  // }
 
 }
